force-app/main/default/objects/RTL_Data_Summary__c/RTL_Data_Summary__c.object-meta.xml
<CustomObject>
    <label>Data Summary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>