force-app/main/default/objects/RTL_Data_Summary__c/fields/RTL_Account__c.field-meta.xml
<CustomField>
    <fullName>RTL_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Summary</relationshipLabel>
    <relationshipName>Data_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>