force-app/main/default/objects/RTL_Data_Summary__c/fields/RTL_Data_Age__c.field-meta.xml
<CustomField>
    <fullName>RTL_Data_Age__c</fullName>
    <label>Data Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>