force-app/main/default/objects/RTL_Data_Summary__c/fields/RTL_Data_Age_Message__c.field-meta.xml
<CustomField>
    <fullName>RTL_Data_Age_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Age Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>