force-app/main/default/objects/RTL_Data_Summary__c/fields/RTL_Overall_Quality__c.field-meta.xml
<CustomField>
    <fullName>RTL_Overall_Quality__c</fullName>
    <formula>IF(
(IF( ISPICKVAL(RTL_Data_Quality__c, &quot;Pass&quot;) , 33, 0) +  
IF( ISPICKVAL(RTL_Data_Age__c, &quot;Pass&quot;) , 33, 0) +
IF( ISPICKVAL(RTL_Marketing_Messages__c, &quot;Pass&quot;) , 33, 0))=99
,
100
,
IF( ISPICKVAL(RTL_Data_Quality__c, &quot;Pass&quot;) , 33, 0) +  
IF( ISPICKVAL(RTL_Data_Age__c, &quot;Pass&quot;) , 33, 0) +
IF( ISPICKVAL(RTL_Marketing_Messages__c, &quot;Pass&quot;) , 33, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Quality</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>